<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fondo_negro"
    tools:context=".RegisterActivity">

    <ImageView
        android:id="@+id/imageView19"
        android:layout_width="159dp"
        android:layout_height="156dp"
        android:layout_marginTop="4dp"
        android:contentDescription="@string/app_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/logo_nightendar" />

    <EditText
        android:id="@+id/editTextUsername"
        android:layout_width="270dp"
        android:layout_height="48dp"
        android:layout_marginTop="288dp"
        android:autofillHints=""
        android:background="@color/morado_texto"
        android:hint="@string/Usuario"
        android:inputType="text"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="270dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:autofillHints=""
        android:background="@color/morado_texto"
        android:hint="@string/Contraseña"
        android:inputType="textPassword"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextUsername"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/buttonLogin"
        android:layout_width="226dp"
        android:layout_height="58dp"
        android:background="@color/fondo_negro"
        android:text="@string/Login"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonRegister"
        app:layout_constraintVertical_bias="0.401" />

    <EditText
        android:id="@+id/editTextEmail"
        android:layout_width="270dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="44dp"
        android:autofillHints=""
        android:background="@color/morado_texto"
        android:hint="@string/Email"
        android:inputType="textEmailAddress"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toTopOf="@+id/editTextUsername"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView19"
        app:layout_constraintVertical_bias="1.0"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/buttonRegister"
        android:layout_width="270dp"
        android:layout_height="80dp"
        android:background="@color/fondo_negro"
        android:text="@string/Register"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextPassword"
        app:layout_constraintVertical_bias="0.223" />

</androidx.constraintlayout.widget.ConstraintLayout>

