<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/setting"
        android:contentDescription="@string/Logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:clickable="true"
        android:onClick="settingClick"
        />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/Logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/logo_nightendar" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:contentDescription="@string/User_Logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/user"
        android:clickable="true"
        android:onClick="userClick"/>

    <!-- Se supone que el mes y las flechas son en negro-->

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="78dp"
        android:layout_height="61dp"
        android:clickable="true"
        android:contentDescription="@string/recomendaciones"
        android:onClick="recomendedClick"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/imageView4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.892"
        app:srcCompat="@drawable/star1" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="85dp"
        android:layout_height="60dp"
        android:clickable="true"
        android:contentDescription="@string/calendar"
        android:onClick="recomendedClick"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/imageView9"
        app:layout_constraintStart_toEndOf="@+id/imageView7"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.892"
        app:srcCompat="@drawable/calendar" />

    <ImageView
        android:id="@+id/imageView13"
        android:layout_width="62dp"
        android:layout_height="67dp"
        android:clickable="true"
        android:contentDescription="@string/left_arrow"
        android:onClick="recomendedClick"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/arrowleft" />

    <com.google.android.gms.maps.MapView
        android:id="@+id/mapView"
        android:layout_width="310dp"
        android:layout_height="325dp"
        android:contentDescription="@string/map"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.384"
        app:layout_constraintStart_toEndOf="@+id/imageView13"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.527" />

    <ImageView
        android:id="@+id/imageView18"
        android:layout_width="313dp"
        android:layout_height="334dp"
        android:layout_marginStart="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView13"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.539"
        app:srcCompat="@android:drawable/ic_menu_mapmode" />

    <ImageView
        android:id="@+id/imageView9"
        android:layout_width="75dp"
        android:layout_height="57dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView4"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.888"
        app:srcCompat="@drawable/map"
        app:tint="@android:color/white" />


</androidx.constraintlayout.widget.ConstraintLayout>
